--- a/container.env.template
+++ b/container.env.template
@@ -1,2 +1,2 @@
-MEETING_URL=<meeting URL>
-RTMP_URL=rtmp://live.twitch.tv/app/<Twitch stream key>
+SRC_URL=<meeting URL>
+DST_URL=rtmp://live.twitch.tv/app/<Twitch stream key>
